--- a/nginx.conf
+++ b/nginx.conf
@@ -49,6 +49,16 @@ http {
             ';
         }
 
+        location /luajitcheck {
+            content_by_lua '
+                if jit then
+                    ngx.say(jit.version)
+                else
+                    ngx.say("Not LuaJIT!")
+                end
+            ';
+        }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
