Make plain old bash build scripts, docker will run them

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,7 @@ http {
     server {
         listen       80;
         server_name  localhost;
+        default_type text/html;
 
         #charset koi8-r;
 
